[package]
name = "redismodule"
version = "0.1.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"

[build-dependencies]
bindgen = "0.53"
cc = "1.0"

[dev-dependencies]
rand = "0.7.3"
redismodule-macros = { path = "./macros" }

[features]
default = []
experimental-api = []

[[example]]
name = "simple"
crate-type = ["cdylib"]

[[example]]
name = "helloworld"
crate-type = ["cdylib"]

[[example]]
name = "hellotimer"
crate-type = ["cdylib"]

[[example]]
name = "hellotype"
crate-type = ["cdylib"]

[[example]]
name = "hellohook"
crate-type = ["cdylib"]

[[example]]
name = "helloblock"
crate-type = ["cdylib"]

[[example]]
name = "hellocluster"
crate-type = ["cdylib"]

[workspace]
members = [
    "macros",
]
