[package]
name = "iredismodule"
version = "0.1.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A toolkit for building Redis modules in Rust"
license = "MIT"
repository = "https://github.com/sigoden/iredismodule"
categories = ["development-tools::ffi"]
keywords = ["redis", "module", "redismodule", "redis-plugin"]
readme = "README.md"

[build-dependencies]
bindgen = "0.53"
cc = "1.0"

[dev-dependencies]
rand = "0.7"
redismodule-macros = { path = "./macros" }
lazy_static = "1.4"

[features]
default = []

[[example]]
name = "simple"
crate-type = ["cdylib"]

[[example]]
name = "helloworld"
crate-type = ["cdylib"]

[[example]]
name = "hellotimer"
crate-type = ["cdylib"]

[[example]]
name = "hellotype"
crate-type = ["cdylib"]

[[example]]
name = "hellohook"
crate-type = ["cdylib"]

[[example]]
name = "helloblock"
crate-type = ["cdylib"]

[[example]]
name = "hellocluster"
crate-type = ["cdylib"]

[[example]]
name = "helloacl"
crate-type = ["cdylib"]

[workspace]
members = [
    "macros",
]
