[package]
name = "iredismodule-macros"
version = "0.1.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["derive", "parsing", "printing", "clone-impls", "proc-macro", "full"] }
proc-macro2 = "1.0"
