[package]
name = "iredismodule-macros"
version = "0.1.1"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"
description = "A toolkit for building Redis modules in Rust"
license = "MIT"
repository = "https://github.com/sigoden/iredismodule"
categories = ["development-tools::ffi"]
keywords = ["redis", "module", "redismodule", "redis-plugin"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["derive", "parsing", "printing", "clone-impls", "proc-macro", "full"] }
proc-macro2 = "1.0"
